--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,30 @@ node_modules/
 # IDE files
 *.iml
 .idea/*
+
+# ignore local files
+.DS_Store
+.htaccess
+/index.php
+/license.txt
+/readme.html
+/wp-activate.php
+/wp-admin
+/wp-blog-header.php
+/wp-comments-post.php
+/wp-config-sample.php
+/wp-config.php
+/wp-cron.php
+/wp-includes
+/wp-links-opml.php
+/wp-load.php
+/wp-login.php
+/wp-mail.php
+/wp-settings.php
+/wp-signup.php
+/wp-trackback.php
+/xmlrpc.php
+/.vscode
+/phpcs.xml
+vendor
+/wp-content/mu-plugins
